--- a/users/templates/users/homepage.html
+++ b/users/templates/users/homepage.html
@@ -27,7 +27,7 @@
             <div class="section">
                 <h2>Help & Support</h2>
                 <p>If you need help or support, you can contact us or visit our help center.</p>
-                <a href="{% url 'transaction_container' %}" class="btn">Help Center</a>
+                <a href="" class="btn">Help Center</a>
             </div>
         </div>
         
