--- a/users/templates/users/footer.html
+++ b/users/templates/users/footer.html
@@ -6,9 +6,9 @@
         <!-- Footer Column 1: Contact Information -->
         <div class="footer-col">
             <h3>Contact Us</h3>
-            <p>Email: support@example.com</p>
-            <p>Phone: +123 456 7890</p>
-            <p>Address: 1234 Financial St, Suite 567, Cityville, CA 12345</p>
+            <p>Email: supportfinance@gmail.com</p>
+            <p>Phone: +91 0123456789</p>
+            <p>Address: Chennai</p>
         </div>
 
         <!-- Footer Column 2: About Us -->
