user profile is updated

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -28,5 +28,12 @@
             <button type="submit">Save Changes</button>
         </form>
     </div>
-</div>
+
+    <!-- JavaScript to toggle the edit form -->
+    <script>
+        document.getElementById('editButton').addEventListener('click', function() {
+            var editForm = document.getElementById('editForm');
+            editForm.style.display = editForm.style.display === 'none' ? 'block' : 'none';
+        });
+    </script>
 {% endblock %}
